[23] ECJ rejects 'module' as top level package in an import statement
fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2607